# KiCad-PartStash

./: .gitignore  README.md  ROADMAP.md  kicad_favorites.py  pyproject.toml
.github/workflows/: ci.yml
data/: default_parts.json
docs/: clipboard-format.md  header-templates.md  library-management.md  manual-test-checklist.md  snippet-validation.md
examples/: README.md  capacitor_0805_handsolder.kicad_clipboard  pin_header_1x04_vertical_male.kicad_clipboard  pin_socket_1x04_vertical_female.kicad_clipboard  resistor_0805_handsolder.kicad_clipboard
src/kicad_partstash/: __init__.py  app.py  models.py  search.py  snippet_generators.py  snippet_references.py  snippet_validation.py  storage.py  templates.py
tests/: test_default_library.py  test_generators.py  test_search_templates.py  test_snippet_references.py  test_storage.py
